--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/list-favicon.png" type="image/x-icon">
 </head>
@@ -17,10 +17,19 @@
         <div class="container-fluid justify-content-around">
           <a class="navbar-brand text-white">To-Do List</a>
           <form class="d-flex w-50">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control me-2" id="filter" type="search" placeholder="Search" aria-label="Search">
           </form>
         </div>
       </nav>
+      <div class="toast" id="popup-toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-body bg-dark text-white">
+          Are You Sure?
+          <div class="mt-2 pt-2 border-top">
+            <button type="button" class="btn btn-info btn-sm check-sure text-white" data-bs-dismiss="toast">Yes</button>
+            <button type="button" class="btn btn-secondary btn-sm check-not-sure" data-bs-dismiss="toast">Close</button>
+          </div>
+        </div>
+    </div>
 </header>
 <body>
     <div class="container vh-100" id="todo-list">
@@ -28,11 +37,10 @@
             <input class="form-control me-2" id="item" type="text" placeholder="Add a Task to Your Schedule" aria-label="Add">
             <div id="task-adding-day-selector">
                 <select class="form-select bg-info text-white border-info" id="order-select" aria-label="Default select example">
-                    <option selected>Day</option>
-                    <option class="bg-success" value="Yesterday">Yesterday</option>
-                    <option class="bg-primary" value="Today">Today</option>
-                    <option class="bg-warning" value="Tomorrow">Tomorrow</option>
-                    <option value="Done">Done</option>
+                    <option selected>Priority</option>
+                    <option class="bg-success" value="Tertiary">Tertiary</option>
+                    <option class="bg-primary" value="Secondary">Secondary</option>
+                    <option class="bg-warning" value="Primary">Primary</option>
                 </select>
             </div>
             <button class="btn btn-outline-info bg-info text-white" id="adding-btn" type="submit">Add</button>
@@ -41,57 +49,27 @@
             <div class="col-9">
                 <h4 class="bg-dark text-white rounded text-center p-2" id="scheduled-title">Scheduled Tasks</h4>
                 <ul class="list-group" id="itemList">
-                    <li class="list-group-item d-flex bg-light">
-                        <p class="px-2 flex-grow-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, a?</p> 
+                    <li class="list-group-item bg-light">
+                        <p class="px-2 flex-grow-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, tenetur?</p> 
                         <div class="btn-group h-25" role="group" aria-label="Button group with nested dropdown">
-                            <button class="btn btn-info text-white" type="button"><i class="fa-solid fa-check"></i></button>
-                            <button class="btn btn-info text-white" type="button"><i class="fa-solid fa-xmark"></i></button>
+                            <i class="fa-solid fa-check text-white bg-info done-mark list-check-btn"></i>
+                            <i class="fa-solid fa-xmark text-white bg-info delete list-x-btn"></i>
                         </div>
-                        <div class="day-selector-menu">
-                            <select class="form-select bg-info text-white border-info order-day" aria-label="Default select example">
-                                <option selected>Day</option>
-                                <option class="bg-success" value="Yesterday">Yesterday</option>
-                                <option class="bg-primary" value="Today">Today</option>
-                                <option class="bg-warning" value="Tomorrow">Tomorrow</option>
-                            </select>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex bg-light">
-                        <p class="px-2 flex-grow-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, a?</p> 
-                        <div class="btn-group h-25" role="group" aria-label="Button group with nested dropdown">
-                            <button type="button" class="btn btn-info text-white"><i class="fa-solid fa-check"></i></button>
-                            <button type="button" class="btn btn-info text-white"><i class="fa-solid fa-xmark"></i></button>
-                        </div>
-                        <div class="day-selector-menu">
-                            <select class="form-select bg-info text-white border-info" aria-label="Default select example">
-                                <option selected>Day</option>
-                                <option class="bg-success" value="Yesterday">Yesterday</option>
-                                <option class="bg-primary" value="Today">Today</option>
-                                <option class="bg-warning" value="Tomorrow">Tomorrow</option>
-                            </select>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex bg-light">
-                        <p class="px-2 flex-grow-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, a?</p> 
-                        <div class="btn-group h-25" role="group" aria-label="Button group with nested dropdown">
-                            <button type="button" class="btn btn-info text-white"><i class="fa-solid fa-check"></i></button>
-                            <button type="button" class="btn btn-info text-white"><i class="fa-solid fa-xmark"></i></button>
-                        </div>
-                        <div class="day-selector-menu">
-                            <select class="form-select bg-info text-white border-info" aria-label="Default select example">
-                                <option selected>Day</option>
-                                <option class="bg-success" value="Yesterday">Yesterday</option>
-                                <option class="bg-primary" value="Today">Today</option>
-                                <option class="bg-warning" value="Tomorrow">Tomorrow</option>
-                            </select>
+                        <div class="displayer-container bg-info rounded">
+                            <h6 class="text-white">Priority</h6>
                         </div>
                     </li>
                 </ul>
             </div>
             <div class="col-3">
                 <h4 class="bg-dark text-white rounded text-center p-2" id="done-title">Done</h4>
-                <ul>
-
+                <ul class="list-group" id="doneList">
+                    <li class="list-group-item d-flex bg-dark bg-gradient text-white">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, necessitatibus!</p>
+                        <div>
+                            <i class="fa-solid fa-xmark delete"></i>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
